// Copyright (c) 2018 ContentBox Authors. 
// Use of this source code is governed by a MIT-style 
// license that can be found in the LICENSE file.

syntax = "proto3";
package rpcpb;

import "github.com/BOXFoundation/boxd/core/pb/block.proto";

message Utxo {
    corepb.OutPoint out_point = 1;
    corepb.TxOut    tx_out = 2;
	  uint32          block_height = 3;
	  bool            is_spent = 4;
}

message BaseResponse {
    int32 code = 1;
    string message = 2;
}
