// Copyright (c) 2018 ContentBox Authors. 
// Use of this source code is governed by a MIT-style 
// license that can be found in the LICENSE file.

syntax = "proto3";
package rpcpb;

import "github.com/BOXFoundation/boxd/core/pb/block.proto";
import "google/api/annotations.proto";
import "common.proto";

service TransactionCommand {

    rpc GetBalance(GetBalanceReq) returns (GetBalanceResp) {
        option (google.api.http) = {
            post: "/v1/tx/getbalance"
            body: "*"
        };
    }

    rpc GetTokenBalance(GetTokenBalanceReq) returns (GetBalanceResp) {
        option (google.api.http) = {
            post: "/v1/tx/gettokenbalance"
            body: "*"
        };
    }

    rpc FetchUtxos(FetchUtxosReq) returns (FetchUtxosResp) {
        option (google.api.http) = {
            post: "/v1/tx/fetchutxos"
            body: "*"
        };
    }

    rpc SendTransaction(SendTransactionReq) returns (SendTransactionResp) {
        option (google.api.http) = {
            post: "/v1/tx/sendtransaction"
            body: "*"
        };
    }

    rpc GetRawTransaction(GetRawTransactionRequest) returns (GetRawTransactionResponse) {
        option (google.api.http) = {
            post: "/v1/tx/getrawtransaction"
            body: "*"
        };
    }

    rpc GetFeePrice(GetFeePriceRequest) returns (GetFeePriceResponse) {
        option (google.api.http) = {
            post: "/v1/tx/getfeeprice"
            body: "*"
        };
    }

    rpc GetTransactionPool(GetTransactionPoolRequest) returns (GetTransactionsResponse) {
        option (google.api.http) = {
            post: "/v1/tx/gettxpool"
            body: "*"
        };
    }

    rpc MakeUnsignedTx(MakeTxReq) returns (MakeTxResp) {
        option (google.api.http) = {
            post: "/v1/tx/makeunsignedtx"
            body: "*"
        };
    }

    rpc MakeUnsignedSplitAddrTx(MakeSplitAddrTxReq) returns (MakeSplitAddrTxResp) {
        option (google.api.http) = {
            post: "/v1/tx/makeunsignedsplitaddrtx"
            body: "*"
        };
    }
}

message GetBalanceReq {
    repeated string addrs = 1;
}

message GetBalanceResp {
    int32 code = 1;
    string message = 2;
    repeated uint64 balances = 3;
}

message GetTokenBalanceReq {
    repeated string addrs = 1;
    corepb.OutPoint tokenID = 2;
}

message FetchUtxosReq {
  string addr = 1;
  corepb.OutPoint tokenID = 2;
  uint64 amount = 3;
}

message FetchUtxosResp {
    int32 code = 1;
    string message = 2;
    repeated Utxo utxos = 3;
}

message GetRawTransactionRequest {
    bytes hash = 1;
}

message GetRawTransactionResponse {
    corepb.Transaction tx = 1;
}

message GetTransactionPoolRequest {

}

message GetTransactionsResponse {
    repeated corepb.Transaction txs = 1;
}

message SendTransactionReq {
    corepb.Transaction tx = 1;
}

message SendTransactionResp {
    int32 code = 1;
    string message = 2;
    string hash = 3;
}

message ListUtxosResponse {
    int32 code = 1;
    string message = 2;
    uint32 count = 3;
    repeated Utxo utxos = 4;
}

message GetFeePriceRequest{
}

message GetFeePriceResponse {
    uint64 box_per_byte = 1;
}

message MakeTxReq {
    string from = 1;
    repeated string to = 2;
    repeated uint64 amounts = 3;
    uint64 fee = 4;
}

message MakeTxResp {
    int32 code = 1;
    string message = 2;
    corepb.Transaction tx = 3;
    repeated bytes rawMsgs = 4;
}

message MakeSplitAddrTxReq {
    string from = 1;
    repeated string addrs = 2;
    repeated uint64 weights = 3;
    uint64 fee = 4;
}

message MakeSplitAddrTxResp {
    int32 code = 1;
    string message = 2;
    string splitAddr = 3;
    corepb.Transaction tx = 4;
    repeated bytes rawMsgs = 5;
}
